generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImFontGlyphRangesBuilder.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImFontGlyphRangesBuilder where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void AddChar(ImFontGlyphRangesBuilder* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_AddChar"
  imFontGlyphRangesBuilder_AddChar :: (Ptr ImFontGlyphRangesBuilder) -> ImWchar -> IO ()
-- C: void AddRanges(ImFontGlyphRangesBuilder* self, const ImWchar* ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_AddRanges"
  imFontGlyphRangesBuilder_AddRanges :: (Ptr ImFontGlyphRangesBuilder) -> (Ptr ImWchar) -> IO ()
-- C: void AddText(ImFontGlyphRangesBuilder* self, const char* text, const char* text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_AddText"
  imFontGlyphRangesBuilder_AddText :: (Ptr ImFontGlyphRangesBuilder) -> CString -> CString -> IO ()
-- C: void BuildRanges(ImFontGlyphRangesBuilder* self, ImVector_ImWchar* out_ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_BuildRanges"
  imFontGlyphRangesBuilder_BuildRanges :: (Ptr ImFontGlyphRangesBuilder) -> (Ptr ImVector_ImWchar) -> IO ()
-- C: void Clear(ImFontGlyphRangesBuilder* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_Clear"
  imFontGlyphRangesBuilder_Clear :: (Ptr ImFontGlyphRangesBuilder) -> IO ()
-- C: bool GetBit(const ImFontGlyphRangesBuilder* self, size_t n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_GetBit"
  imFontGlyphRangesBuilder_GetBit :: (Ptr ImFontGlyphRangesBuilder) -> CSize -> IO CBool
-- C: void SetBit(ImFontGlyphRangesBuilder* self, size_t n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontGlyphRangesBuilder_SetBit"
  imFontGlyphRangesBuilder_SetBit :: (Ptr ImFontGlyphRangesBuilder) -> CSize -> IO ()
